--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "ɪꝛσ ꭙ ᴍᴜꜱɪᴄ",
+    "name": "myra ꭙ ᴍᴜꜱɪᴄ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "https://te.legra.ph/file/614dc886c1dc0bdb366a1.jpg",
     "keywords": [
